Refatoração na busca por local